# podcasts-backend-fastapi

./: .env_example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
podcasts_backend/: main.py
podcasts_backend/models/: models.py  users.py
podcasts_backend/repository/: database.py  datastore.py  favorite_podcasts.py  mock_data_upload.py  podcast_repository.py  repository.py  users.py
podcasts_backend/repository/db/: postgres.py
podcasts_backend/repository/providers/: milvus.py
podcasts_backend/repository/vector_database/: datastore.py
podcasts_backend/repository/vector_database/providers/: milvus.py
podcasts_backend/routers/: auth.py  favorite_podcasts.py  podcasts.py
podcasts_backend/schemas/: schemas.py  users.py
podcasts_backend/services/: auth.py  embeddings.py  favorite_podcasts.py  podcast_episode_service.py
