[tool.poetry]
name = "podcasts-backend-fastapi"
version = "0.1.0"
description = "Backend for the podcasts web app"
authors = ["David Galevski <davidgalevski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlmodel = "^0.0.8"
pymilvus = "2.2.4"
sentence-transformers = "^2.2.2"
psycopg2-binary = "^2.9.6"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pandas = "^1.5.3"
mypy = "^1.2.0"
ruff = "^0.0.262"
pandas-stubs = "^2.0.0.230412"
types-python-jose = "^3.3.4.8"
types-passlib = "^1.7.7.12"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true